kubernetes-networks/canary-namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
   name: echo-production
---
apiVersion: v1
kind: Namespace
metadata:
   name: echo-canary
